@@ -1,11 +1,17 @@
 #!/bin/bash
 
 file=$1
+package=$2
 
 if [ -z "$file" ]
 then
     echo "Usage: $0 <filename>"
     exit 1
+fi
+
+if [ -n "$package" ]; then
+    sed -i "3 a\\
+Package: $package" $file
 fi
 
 URL=http://crashreport.zentyal.org/report/
