@@ -1,3 +1,5 @@
+HEAD
+	+ Included the package field in crash report
 3.4.3
 	+ Fix MIME type for returning JSON (application/json)
 	+ Added setMessage() and popMessageAndClass() methods to TreeView
